Changelog for CPAN-Testers-Schema

{{ $NEXT }}

0.011     2017-05-14 15:50:18+02:00 Europe/Paris

    [Added]

    - Added cpantesters-schema install to custom DSN. This allows me to
      build a custom SQLite database for local testing.
    - Added a SQLite schema deployment strategy. This should make
      testing a bit easier.

0.010     2017-05-14 10:30:48+02:00 Europe/Paris

    [Fixed]

    - Fixed date/time format handling for TestReport created field. We
      need to make sure that the date/time is formatted correctly for
      the given database engine. The "created" date/time in the report
      is always a full ISO8601 date/time.

0.009     2017-05-13 14:42:38+02:00 Europe/Paris

    [Fixed]

    - Changed Metabase -> TestReport migration for new test report
      format, which moves the test result into a top-level "result" key.

0.008     2017-05-13 10:53:47+02:00 Europe/Paris

    [Fixed]

    - Updated metabase users table to add unique constraint to user
      GUID. The source table has multiple mappings for a single user,
      but as @bingos pointed out: This means that some e-mails for
      a user are completely inaccurate, bordering on malicious (since
      authors cannot get in touch with testers). The new table has only
      one mapping per GUID, and we can then update that mapping if
      a tester complains.

0.007     2017-05-12 17:52:23+02:00 Europe/Paris

    [Added]

    - Add a "created" field to the TestReport table to keep track of
      when the test report was created
    - Auto serialize the TestReport to/from JSON
    - Add the ID and created date/time to the JSON test report
    - Add a table to hold the old Metabase user information so we can
      find name/email for legacy clients
    - Add a conversion method from Metabase::Fact to the new test
      report. This allows legacy clients to send in Metabase reports and
      be updated to the new test report format.


0.006     2017-05-12 10:02:58+02:00 Europe/Paris
