@@ -73,51 +73,55 @@
    "provides" : {
       "CPAN::Testers::Schema" : {
          "file" : "lib/CPAN/Testers/Schema.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Base" : {
          "file" : "lib/CPAN/Testers/Schema/Base.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::LatestIndex" : {
          "file" : "lib/CPAN/Testers/Schema/Result/LatestIndex.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::MetabaseUser" : {
          "file" : "lib/CPAN/Testers/Schema/Result/MetabaseUser.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::Release" : {
          "file" : "lib/CPAN/Testers/Schema/Result/Release.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::ReleaseStat" : {
          "file" : "lib/CPAN/Testers/Schema/Result/ReleaseStat.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::Stats" : {
          "file" : "lib/CPAN/Testers/Schema/Result/Stats.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::TestReport" : {
          "file" : "lib/CPAN/Testers/Schema/Result/TestReport.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::Result::Upload" : {
          "file" : "lib/CPAN/Testers/Schema/Result/Upload.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::ResultSet::Release" : {
          "file" : "lib/CPAN/Testers/Schema/ResultSet/Release.pm",
-         "version" : "0.011"
+         "version" : "0.012"
+      },
+      "CPAN::Testers::Schema::ResultSet::Stats" : {
+         "file" : "lib/CPAN/Testers/Schema/ResultSet/Stats.pm",
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::ResultSet::TestReport" : {
          "file" : "lib/CPAN/Testers/Schema/ResultSet/TestReport.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "CPAN::Testers::Schema::ResultSet::Upload" : {
          "file" : "lib/CPAN/Testers/Schema/ResultSet/Upload.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       }
    },
    "release_status" : "stable",
@@ -133,10 +137,11 @@
       },
       "x_IRC" : "irc://irc.perl.org/#cpantesters-discuss"
    },
-   "version" : "0.011",
+   "version" : "0.012",
    "x_authority" : "cpan:PREACTION",
    "x_contributors" : [
-      "Breno G. de Oliveira <garu@cpan.org>"
+      "Breno G. de Oliveira <garu@cpan.org>",
+      "Joel Berger <joel.a.berger@gmail.com>"
    ],
    "x_serialization_backend" : "Cpanel::JSON::XS version 3.0216"
 }
