@@ -1,0 +1,4 @@
+-- Convert schema '/Users/doug/perl/cpantesters/schema/share/CPAN-Testers-Schema-0.011-MySQL.sql' to 'CPAN::Testers::Schema v0.012':;
+
+-- No differences found;
+
