@@ -1,0 +1,4 @@
+-- Convert schema '/Users/doug/perl/cpantesters/schema/share/CPAN-Testers-Schema-0.011-SQLite.sql' to '/Users/doug/perl/cpantesters/schema/share/CPAN-Testers-Schema-0.012-SQLite.sql':;
+
+-- No differences found;
+
